Profile Page - text align fix

--- a/profilePage.css
+++ b/profilePage.css
@@ -67,6 +67,7 @@ button:active {
      display: flex;
      justify-content: flex-start;
      align-items: center;
+     text-align: left;
 
      gap: 10px;
      width: 100%;
